# holoso

./: .gitignore  .gitmodules  AGENTS.md  DESIGN.draft.md  DESIGN.md  HANDOFF.md  PRIOR_ART.md  README.md  TODO.md  conftest.py  moved.json  noxfile.py  pyproject.toml
.claude/skills/audit-schedule-quality/: SKILL.md
.claude/skills/comment-cleanup/: SKILL.md
.claude/skills/review-loop/: SKILL.md
.claude/skills/verify-rtl-report-equivalence/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: campaign.md
docs/decisions/: README.md  arch-memo.md  arch-ruling.md  arch-spike.md  b1-design.md  freeze-design.md  h1-ledger.md  routing-schema.md  scope-ruling.md  spike-ledger.md
examples/: cordic_sincos.py  ekf1.py  ekf1_stateful.py  ekf1_stateless.py  equal_temperament.py  finite_set_current_controller.py  iir1_hpf.py  iir1_lpf.py  imu_frame_transform.py  kepler.py  latching_fault_register.py  madd.py  majority_voter.py  octave_index.py  phase_frequency_detector.py  pi_saturating.py  pid.py  polar.py  poly3.py  quadrature_encoder.py  recip_newton.py  remainder.py  schmitt_trigger.py  signal_window.py  trapezoidal_leaky_streaming_integrator.py  uart.py
hdl/: holoso_support.v  holoso_support.vh
holoso/: __init__.py  _api.py  _backend_verilog.py  _errors.py  _format.py  _hir.py  _interface.py  _legal.py  _lir.py  _lower.py  _mir.py  _operators.py  _passes.py  _regalloc.py  _result.py  _schedule.py  _scheduler.py  _shape.py  _type.py  _util.py  _value.py  _verify.py  api.py  backend_support.py  backend_verilog.py  emit.py  errors.py  format.py  frontend.py  hir.py  lir.py  operators.py  passes.py  regalloc.py  result.py  schedule.py  scheduler.py
holoso/_backend/: __init__.py  cocotb.py  numerical.py
holoso/_backend/html/: __init__.py  _html.py  _schedule.py  html.css  html.js  html.py
holoso/_backend/verilog/: __init__.py  _emit.py  _microcode.py  _support.py  holoso_float.v  holoso_int.v  holoso_support.v  holoso_support.vh  holoso_support_inline.vh  holoso_support_template.v  verilog.py
holoso/_frontend/: __init__.py  _aggregate.py  _ast_support.py  _lower.py  _scope.py  _shape.py
holoso/_frontend/_fir/: __init__.py  _analysis_support.py  _analyze.py  _build.py  _consume.py  _emit.py  _fact.py  _fold.py  _ir.py  _opsem.py  _plan.py  _resolve.py  _settle.py  _signature.py  _value.py
holoso/_frontend/_lib/: __init__.py  _intrinsics.py  _linalg.py  _numpy.py  _registry.py
holoso/_hdl/: holoso_support.v
holoso/_hir/: __init__.py  _const.py  _const_fold.py  _copy.py  _dce.py  _fuse_chains.py  _if_convert.py  _ir.py  _operators.py  _optimize.py  _prune_empty.py  _strength_reduce.py  _thread_merges.py  _trivial_phi.py  _types.py
holoso/_lir/: __init__.py  _analysis.py  _bankalloc.py  _build.py  _build_base.py  _coalesce.py  _construct.py  _ir.py  _layout.py  _liveness.py  _mir_facts.py  _portassign.py  _ports.py  _regalloc.py  _schedule.py
holoso/_mir/: __init__.py  _interpret.py  _ir.py  _lower.py
holoso/_zkf/: README.md  __init__.py
holoso/demos/: __init__.py
holoso/hdl/: holoso_support.v
holoso/report/: __init__.py  html.css  html.js  html.py
holoso/verify/: __init__.py  cosim.py  opgraph_eval.py  reference.py  sampling.py  testbench.py  tolerance.py  zkf_codec.py
synth/: __init__.py  __main__.py  _detect.py  _flow_id.py  _ooc.py  _synth.py  test_integer_ooc.py  test_ooc.py  test_regfile.py  yosys.py
synth/flows/: __init__.py  _flow.py  diamond.py  vivado.py  yosys.py
tests/: _cosim.py  _examples.py  _frontend_common.py  _fuzz.py  _golden_cases.py  _hirdump.py  _impact.py  _importguard.py  _modelref.py  _store_alpha.py  _store_beta.py  _synth_targets.py  _writetimeline.py  conftest.py  cosim_driver.py  hdl_float_oracle.py  test_arithmetic_behavior.py  test_assert_purity.py  test_backend.py  test_const_install.py  test_cosim.py  test_cosim_examples.py  test_cosim_sign.py  test_cycle_model.py  test_determinism.py  test_early_returns.py  test_example_reference.py  test_examples_catalogue.py  test_extended_operators.py  test_fir_analyze.py  test_fir_builder.py  test_fir_differential.py  test_fir_fact.py  test_fir_foundations.py  test_frontend.py  test_frontend_aggregates.py  test_frontend_architecture.py  test_frontend_boundary.py  test_frontend_calls.py  test_frontend_control.py  (+44 more)
tests/fuzz_regressions/: __init__.py
tests/golden/: README.md  index.json  provenance.json
tests/golden/abi/: cordic_sincos-e8m36.json  ekf1_stateful-e8m36.json  ekf1_stateful_shipped-e8m36.json  ekf1_stateless-e8m36.json  equal_temperament-e8m36.json  finite_set_current_controller-e8m36.json  fma_round_probe-e8m36.json  format_probe-e11m53.json  format_probe-e6m18.json  format_probe-e8m24.json  format_probe-e8m36.json  from_polar-e8m36.json  iir1_hpf-e8m36.json  iir1_lpf-e8m36.json  imu_frame_transform-e8m36.json  integrator-e8m36.json  kepler-e8m36.json  latching_fault_register-e8m36.json  madd-e8m36.json  majority_voter-e8m36.json  pid-e8m36.json  (+15 more)
tests/hdl/: cosim_driver.py  gate_edge_bench.py  hdl_float_oracle.py  hdl_integer_oracle.py  holoso_support_fn_tb.v  test_ashiftc.py  test_err_cyc.py  test_err_pc.py  test_fadd.py  test_fatan2.py  test_fcmp.py  test_fcmp_const.py  test_fconst.py  test_fdiv.py  test_fexp2.py  test_ffma.py  test_ffrombool.py  test_ffromint.py  test_fisdirinf.py  test_fisfinite.py  test_flog2.py  test_fmul.py  test_fmul_ilog2.py  test_fmul_ilog2_const.py  test_fround.py  test_fsaturate.py  test_fsgnop.py  test_fsgnop_fn.py  test_fsincos.py  test_fsort.py  test_ftobool.py  test_ftoint.py  test_idiv_radix4_step.py  test_idivs.py  test_idivs_ooc_wrapper.py  test_imuls.py  test_integer.py  test_regfile.py  test_transcendental_err_pc.py
tools/: deferral_seam_sweep.py  refreeze_golden.py  synth_compare.py  update_support_rtl.py
(+153 files in other folders)
