[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "holoso"
dynamic = ["version"]
requires-python = ">=3.14"
description = "A narrow Python-to-Verilog synthesizer for numeric kernels."
dependencies = [
    "numpy~=2.4",
    "scipy~=1.17",
    "sympy~=1.14",
]

[project.optional-dependencies]
test = [
    "cocotb~=2.0",
    "jaxtyping~=0.3",  # Holoso supports Jaxtyping annotations, but doesn't require Jaxtyping itself at the moment.
    "pytest~=9.0",
]
format = [
    "black~=26.5",
]
typecheck = [
    "mypy~=2.1",
]

[tool.setuptools.dynamic]
version = {attr = "holoso.__version__"}

[tool.setuptools.packages.find]
include = ["holoso*"]

[tool.setuptools.package-data]
# Each backend ships its runtime assets (loaded via importlib.resources) as package data.
"holoso._backend.verilog" = ["*.v", "*.vh"]
"holoso._backend.html" = ["*.css", "*.js"]
"holoso" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:mypy"]
markers = ["cosim: end-to-end cocotb cosimulation; slow, needs a simulator (run via the cosim_examples nox session)"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
# mypy may not yet recognize 3.14 as a target; analyze under 3.13 semantics (we avoid 3.14-only syntax in typed code).
python_version = "3.13"
strict = true
files = ["holoso"]

[[tool.mypy.overrides]]
module = ["sympy.*", "scipy.*"]
ignore_missing_imports = true
