[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "holoso"
dynamic = ["version"]
requires-python = ">=3.12"  # Verification targets Python 3.14+; earlier versions supported on a best-effort basis.
description = "A simple Python-to-Verilog synthesizer for numeric kernels, control systems, and DSP."
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Zubax Robotics", email = "pavel.kirienko@zubax.com" }]
keywords = [
    "acceleration",
    "accelerator",
    "dsp",
    "eda",
    "fpga",
    "hardware acceleration",
    "hardware design",
    "hdl",
    "high level synthesis",
    "high-level synthesis",
    "hls",
    "logic synthesis",
    "python to verilog",
    "python-to-verilog",
    "rtl",
    "chip design",
    "synthesis",
    "verilog",
    "verilog generation",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "numpy~=2.4",
    "scipy~=1.17",
    "zkf~=0.3.0",
]

[project.optional-dependencies]
test = [
    "cocotb~=2.0",
    "jaxtyping~=0.3", # Holoso supports Jaxtyping annotations, but doesn't require Jaxtyping itself at the moment.
    "pytest~=9.0",
    "pytest-xdist~=3.8", # parallel workers; the synth_examples session pins -n explicitly (RAM-bound wide PAR)
]

[project.urls]
Homepage = "https://holoso.digital"
Repository = "https://github.com/Zubax/holoso"
Forum = "https://forum.zubax.com"

[tool.setuptools.dynamic]
version = { attr = "holoso.__version__" }

[tool.setuptools.packages.find]
include = ["holoso*"]

[tool.setuptools.package-data]
"holoso._backend.verilog" = ["*.v", "*.vh"]
"holoso._backend.html" = ["*.css", "*.js"]
"holoso" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-p", "no:mypy"]
log_file_mode = "w"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s.%(msecs)03d %(levelname)-8s [%(name)s] %(filename)s:%(lineno)d %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "cosim: end-to-end cocotb cosimulation; slow, needs a simulator",
    "fuzz: end-to-end blackbox differential fuzzing; slow, no simulator",
    "synth: end-to-end out-of-context FPGA synthesis of the example matrix; slow, needs a synthesis tool",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["holoso", "tests", "examples", "synth", "tools"]

[[tool.mypy.overrides]]
module = ["scipy.*", "cocotb.*", "cocotb_tools.*"]
ignore_missing_imports = true
